samples/_failures_safe/1761198281_8b972f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9448763d.c: In function ‘main’:
./samples/SAFE/__tmp_9448763d.c:168:20: error: missing terminating " character
  168 |             printf("Memory
      |                    ^~~~~~~
./samples/SAFE/__tmp_9448763d.c:168:13: error: expected expression at end of input
  168 |             printf("Memory
      |             ^~~~~~
./samples/SAFE/__tmp_9448763d.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9448763d.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9448763d.c:168:13: error: expected declaration or statement at end of input
